// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostSavePicker - Mobile Snapshots > matches snapshot on mobile viewport 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls="radix-normalized"
      aria-expanded="true"
      aria-haspopup="dialog"
      aria-label="Save post"
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 border-none shadow-xs w-10"
      data-cy="post-bookmark-btn"
      data-size="sm"
      data-slot="button"
      data-state="open"
      data-variant="secondary"
      type="button"
    >
      <span
        class="relative size-4"
        data-cy="post-save-trigger-icon"
        data-state="saved"
        data-testid="typography"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-library absolute inset-0 transition-[opacity,transform] duration-150 ease-out scale-75 opacity-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6 4 14"
          />
          <path
            d="M12 6v14"
          />
          <path
            d="M8 8v12"
          />
          <path
            d="M4 4v16"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="lucide lucide-square-library absolute inset-0 transition-[opacity,transform] duration-150 ease-out scale-100 opacity-100 text-brand"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M7 7v10"
          />
          <path
            d="M11 7v10"
          />
          <path
            d="m15 7 2 10"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    aria-hidden="true"
    class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto;"
    type="button"
  />
  <div
    aria-labelledby="radix-normalized"
    class="fixed z-50 p-6 shadow-lg transition ease-in-out data-[state=closed]:animate-out data-[state=closed]:duration-300 data-[state=open]:animate-in data-[state=open]:duration-500 inset-x-0 bottom-0 border-t data-[state=closed]:slide-out-to-bottom data-[state=open]:slide-in-from-bottom flex max-h-dvh flex-col gap-0 rounded-t-xl border-border bg-popover"
    data-state="open"
    id="radix-normalized"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <div
      class="flex flex-col space-y-2 text-center sm:text-left"
    >
      <h2
        class="text-lg font-semibold text-foreground"
        id="radix-normalized"
      >
        Save post
      </h2>
    </div>
    <div
      class="min-h-0 flex-1 overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex w-full flex-col gap-4"
        data-testid="container"
      >
        <label
          class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-xs tracking-widest text-muted-foreground uppercase"
          data-slot="label"
        >
          Add to collection
        </label>
        <div
          class="flex max-h-[50dvh] flex-col overflow-y-auto gap-4"
          data-testid="container"
        >
          <button
            class="flex w-full cursor-pointer items-center gap-2 rounded-sm p-0 text-base font-medium text-muted-foreground disabled:opacity-50"
            data-cy="post-save-bookmarks-option"
            data-slot="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bookmark size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
              />
            </svg>
            <span
              class="min-w-0 flex-1 truncate text-left"
              data-testid="typography"
            >
              Bookmarks
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 text-brand"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </button>
          <button
            class="flex w-full cursor-pointer items-center gap-2 rounded-sm p-0 text-base font-medium text-muted-foreground disabled:opacity-50"
            data-cy="post-save-collection-option"
            data-slot="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-library size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 6 4 14"
              />
              <path
                d="M12 6v14"
              />
              <path
                d="M8 8v12"
              />
              <path
                d="M4 4v16"
              />
            </svg>
            <span
              class="min-w-0 flex-1 truncate text-left"
              data-testid="typography"
            >
              Proof of Work
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 text-brand"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </button>
          <button
            class="flex w-full cursor-pointer items-center gap-2 rounded-sm p-0 text-base font-medium text-muted-foreground disabled:opacity-50"
            data-cy="post-save-collection-option"
            data-slot="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-library size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 6 4 14"
              />
              <path
                d="M12 6v14"
              />
              <path
                d="M8 8v12"
              />
              <path
                d="M4 4v16"
              />
            </svg>
            <span
              class="min-w-0 flex-1 truncate text-left"
              data-testid="typography"
            >
              AI Papers
            </span>
          </button>
        </div>
        <div
          class="h-px bg-muted"
          data-testid="container"
        />
        <div
          class="flex flex-col gap-2"
          data-testid="container"
        >
          <label
            class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-xs tracking-widest text-muted-foreground uppercase"
            data-slot="label"
          >
            New Collection
          </label>
          <div
            class="flex items-center gap-2 rounded-md border border-dashed border-input px-4 py-3"
            data-testid="container"
          >
            <input
              class="flex w-full min-w-0 rounded-md border border-input bg-transparent text-base transition-[color,box-shadow] outline-none selection:bg-primary selection:text-primary-foreground file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-input disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 hover:ring-0 hover:outline-none focus:ring-0 focus:ring-offset-0 focus:outline-none aria-invalid:border-destructive aria-invalid:ring-destructive/40 h-auto border-none p-0 shadow-none"
              data-cy="post-save-new-collection-input"
              data-testid="input"
              maxlength="100"
              placeholder="Collection name"
              value=""
            />
            <button
              aria-label="Create collection"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-6"
              data-cy="post-save-new-collection-create-btn"
              data-size="icon"
              data-slot="button"
              data-variant="secondary"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <button
      class="absolute top-4 right-4 rounded-sm opacity-70 ring-offset-background transition-opacity hover:opacity-100 focus:ring-2 focus:ring-ring focus:ring-offset-2 focus:outline-none disabled:pointer-events-none data-[state=open]:bg-secondary"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
      <span
        class="sr-only"
      >
        Close
      </span>
    </button>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`PostSavePicker - Snapshots > matches desktop picker snapshot when open 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls="radix-normalized"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Save post"
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 border-none shadow-xs w-10"
      data-cy="post-bookmark-btn"
      data-radix-popper-align="end"
      data-radix-popper-side="bottom"
      data-size="sm"
      data-slot="button"
      data-state="open"
      data-variant="secondary"
      id="radix-normalized"
      type="button"
    >
      <span
        class="relative size-4"
        data-cy="post-save-trigger-icon"
        data-state="saved"
        data-testid="typography"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-library absolute inset-0 transition-[opacity,transform] duration-150 ease-out scale-75 opacity-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6 4 14"
          />
          <path
            d="M12 6v14"
          />
          <path
            d="M8 8v12"
          />
          <path
            d="M4 4v16"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="lucide lucide-square-library absolute inset-0 transition-[opacity,transform] duration-150 ease-out scale-100 opacity-100 text-brand"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M7 7v10"
          />
          <path
            d="M11 7v10"
          />
          <path
            d="m15 7 2 10"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px); min-width: max-content; z-index: auto; --radix-popper-available-width: 0px; --radix-popper-available-height: -4px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 100% 0px;"
  >
    <div
      aria-labelledby="radix-normalized"
      aria-orientation="vertical"
      class="z-50 min-w-[8rem] overflow-hidden rounded-md border border-border bg-background p-4 shadow-xl data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 max-h-[var(--radix-dropdown-menu-content-available-height)] w-70 overflow-y-auto"
      data-align="end"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="bottom"
      data-state="open"
      dir="ltr"
      id="radix-normalized"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
      tabindex="-1"
    >
      <div
        class="flex w-full flex-col gap-3"
        data-testid="container"
      >
        <label
          class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-xs tracking-widest text-muted-foreground uppercase"
          data-slot="label"
        >
          Add to collection
        </label>
        <div
          class="flex max-h-[50dvh] flex-col overflow-y-auto gap-3"
          data-testid="container"
        >
          <div
            class="relative flex cursor-pointer items-center rounded-sm transition-colors outline-none select-none hover:text-foreground focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50 w-full gap-2 p-0 text-base font-medium text-muted-foreground"
            data-cy="post-save-bookmarks-option"
            data-orientation="vertical"
            data-radix-collection-item=""
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bookmark size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
              />
            </svg>
            <span
              class="min-w-0 flex-1 truncate"
              data-testid="typography"
            >
              Bookmarks
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 text-brand"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </div>
          <div
            class="relative flex cursor-pointer items-center rounded-sm transition-colors outline-none select-none hover:text-foreground focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50 w-full gap-2 p-0 text-base font-medium text-muted-foreground"
            data-cy="post-save-collection-option"
            data-orientation="vertical"
            data-radix-collection-item=""
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-library size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 6 4 14"
              />
              <path
                d="M12 6v14"
              />
              <path
                d="M8 8v12"
              />
              <path
                d="M4 4v16"
              />
            </svg>
            <span
              class="min-w-0 flex-1 truncate"
              data-testid="typography"
            >
              Proof of Work
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 text-brand"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </div>
          <div
            class="relative flex cursor-pointer items-center rounded-sm transition-colors outline-none select-none hover:text-foreground focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50 w-full gap-2 p-0 text-base font-medium text-muted-foreground"
            data-cy="post-save-collection-option"
            data-orientation="vertical"
            data-radix-collection-item=""
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-library size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 6 4 14"
              />
              <path
                d="M12 6v14"
              />
              <path
                d="M8 8v12"
              />
              <path
                d="M4 4v16"
              />
            </svg>
            <span
              class="min-w-0 flex-1 truncate"
              data-testid="typography"
            >
              AI Papers
            </span>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          class="-mx-1 my-1 h-px bg-muted"
          role="separator"
        />
        <div
          class="flex flex-col gap-2 pt-1"
          data-testid="container"
        >
          <label
            class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-xs tracking-widest text-muted-foreground uppercase"
            data-slot="label"
          >
            New Collection
          </label>
          <div
            class="flex items-center gap-2 rounded-md border border-dashed border-input px-4 py-3"
            data-testid="container"
          >
            <input
              class="flex w-full min-w-0 rounded-md border border-input bg-transparent text-base transition-[color,box-shadow] outline-none selection:bg-primary selection:text-primary-foreground file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-input disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 hover:ring-0 hover:outline-none focus:ring-0 focus:ring-offset-0 focus:outline-none aria-invalid:border-destructive aria-invalid:ring-destructive/40 h-auto border-none p-0 shadow-none"
              data-cy="post-save-new-collection-input"
              data-testid="input"
              maxlength="100"
              placeholder="Collection name"
              value=""
            />
            <button
              aria-label="Create collection"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-6"
              data-cy="post-save-new-collection-create-btn"
              data-size="icon"
              data-slot="button"
              data-variant="secondary"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`PostSavePicker - Snapshots > matches desktop picker snapshot with other collections and a count 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls="radix-normalized"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Save post (2)"
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 border-none shadow-xs"
      data-cy="post-bookmark-btn"
      data-radix-popper-align="end"
      data-radix-popper-side="bottom"
      data-size="sm"
      data-slot="button"
      data-state="open"
      data-variant="secondary"
      id="radix-normalized"
      type="button"
    >
      <span
        class="relative size-4"
        data-cy="post-save-trigger-icon"
        data-state="collected"
        data-testid="typography"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-library absolute inset-0 transition-[opacity,transform] duration-150 ease-out scale-75 opacity-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6 4 14"
          />
          <path
            d="M12 6v14"
          />
          <path
            d="M8 8v12"
          />
          <path
            d="M4 4v16"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="lucide lucide-square-library absolute inset-0 transition-[opacity,transform] duration-150 ease-out scale-100 opacity-100 text-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M7 7v10"
          />
          <path
            d="M11 7v10"
          />
          <path
            d="m15 7 2 10"
          />
        </svg>
      </span>
      <span
        class="text-xs leading-4 font-bold text-muted-foreground"
        data-cy="post-save-collections-count"
        data-testid="typography"
      >
        2
      </span>
    </button>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px); min-width: max-content; z-index: auto; --radix-popper-available-width: 0px; --radix-popper-available-height: -4px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 100% 0px;"
  >
    <div
      aria-labelledby="radix-normalized"
      aria-orientation="vertical"
      class="z-50 min-w-[8rem] overflow-hidden rounded-md border border-border bg-background p-4 shadow-xl data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 max-h-[var(--radix-dropdown-menu-content-available-height)] w-70 overflow-y-auto"
      data-align="end"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="bottom"
      data-state="open"
      dir="ltr"
      id="radix-normalized"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
      tabindex="-1"
    >
      <div
        class="flex w-full flex-col gap-3"
        data-testid="container"
      >
        <label
          class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-xs tracking-widest text-muted-foreground uppercase"
          data-slot="label"
        >
          Add to collection
        </label>
        <div
          class="flex max-h-[50dvh] flex-col overflow-y-auto gap-3"
          data-testid="container"
        >
          <div
            class="relative flex cursor-pointer items-center rounded-sm transition-colors outline-none select-none hover:text-foreground focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50 w-full gap-2 p-0 text-base font-medium text-muted-foreground"
            data-cy="post-save-bookmarks-option"
            data-orientation="vertical"
            data-radix-collection-item=""
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bookmark size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
              />
            </svg>
            <span
              class="min-w-0 flex-1 truncate"
              data-testid="typography"
            >
              Bookmarks
            </span>
          </div>
          <div
            class="relative flex cursor-pointer items-center rounded-sm transition-colors outline-none select-none hover:text-foreground focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50 w-full gap-2 p-0 text-base font-medium text-muted-foreground"
            data-cy="post-save-collection-option"
            data-orientation="vertical"
            data-radix-collection-item=""
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-library size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 6 4 14"
              />
              <path
                d="M12 6v14"
              />
              <path
                d="M8 8v12"
              />
              <path
                d="M4 4v16"
              />
            </svg>
            <span
              class="min-w-0 flex-1 truncate"
              data-testid="typography"
            >
              Proof of Work
            </span>
          </div>
          <div
            class="relative flex cursor-pointer items-center rounded-sm transition-colors outline-none select-none hover:text-foreground focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50 w-full gap-2 p-0 text-base font-medium text-muted-foreground"
            data-cy="post-save-collection-option"
            data-orientation="vertical"
            data-radix-collection-item=""
            role="menuitem"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-library size-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 6 4 14"
              />
              <path
                d="M12 6v14"
              />
              <path
                d="M8 8v12"
              />
              <path
                d="M4 4v16"
              />
            </svg>
            <span
              class="min-w-0 flex-1 truncate"
              data-testid="typography"
            >
              AI Papers
            </span>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          class="-mx-1 my-1 h-px bg-muted"
          role="separator"
        />
        <div
          class="flex flex-col gap-2 pt-1"
          data-testid="container"
        >
          <label
            class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-xs tracking-widest text-muted-foreground uppercase"
            data-slot="label"
          >
            New Collection
          </label>
          <div
            class="flex items-center gap-2 rounded-md border border-dashed border-input px-4 py-3"
            data-testid="container"
          >
            <input
              class="flex w-full min-w-0 rounded-md border border-input bg-transparent text-base transition-[color,box-shadow] outline-none selection:bg-primary selection:text-primary-foreground file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-input disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 hover:ring-0 hover:outline-none focus:ring-0 focus:ring-offset-0 focus:outline-none aria-invalid:border-destructive aria-invalid:ring-destructive/40 h-auto border-none p-0 shadow-none"
              data-cy="post-save-new-collection-input"
              data-testid="input"
              maxlength="100"
              placeholder="Collection name"
              value=""
            />
            <button
              aria-label="Create collection"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-6"
              data-cy="post-save-new-collection-create-btn"
              data-size="icon"
              data-slot="button"
              data-variant="secondary"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          class="-mx-1 my-1 h-px bg-muted"
          role="separator"
        />
        <div
          class="flex flex-col gap-2 pt-1"
          data-cy="post-save-other-collections"
          data-testid="container"
        >
          <label
            class="flex items-center gap-2 font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-xs tracking-widest text-muted-foreground uppercase"
            data-slot="label"
          >
            Also in collections:
          </label>
          <div
            class="flex max-h-48 flex-col gap-2 overflow-y-auto"
            data-testid="container"
          >
            <a
              class="relative py-1.5 select-none focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50 inline-flex items-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs hover:text-accent-foreground border-border h-8 gap-1.5 px-3 has-[>svg]:px-3.5 w-full justify-start bg-muted/25 hover:bg-muted/50"
              data-cy="post-save-other-collection"
              data-orientation="vertical"
              data-radix-collection-item=""
              href="/collections/other-author/collection-a"
              role="menuitem"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-library size-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m16 6 4 14"
                />
                <path
                  d="M12 6v14"
                />
                <path
                  d="M8 8v12"
                />
                <path
                  d="M4 4v16"
                />
              </svg>
              <span
                class="min-w-0 flex-1 truncate text-left text-xs font-bold text-foreground"
                data-testid="typography"
              >
                Bitcoin Industry
              </span>
              <span
                class="relative flex shrink-0 overflow-hidden rounded-full h-4 w-4"
                data-testid="post-save-other-collection-avatar"
              >
                <span
                  class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
                >
                  <div
                    class="facehash h-full w-full rounded-full text-background"
                    data-facehash=""
                    data-interactive="true"
                    style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(255, 0, 0);"
                  >
                    <div
                      data-facehash-gradient=""
                      style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
                    />
                    <div
                      data-facehash-face=""
                      style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(-15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
                        viewBox="0 0 63 15"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          style="animation: facehash-blink 2.8s ease-in-out 0.8s infinite; transform-origin: center center;"
                        >
                          <circle
                            cx="55.2"
                            cy="7.2"
                            fill="currentColor"
                            r="7.2"
                          />
                        </g>
                        <g
                          style="animation: facehash-blink 2.8s ease-in-out 0.8s infinite; transform-origin: center center;"
                        >
                          <circle
                            cx="7.2"
                            cy="7.2"
                            fill="currentColor"
                            r="7.2"
                          />
                        </g>
                      </svg>
                      <div
                        data-facehash-mouth=""
                        style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
                      >
                        <span
                          data-testid="avatar-fallback-initial"
                          style="font-size: 26cqw; line-height: 1;"
                        >
                          S
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </span>
            </a>
            <a
              class="relative py-1.5 select-none focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50 inline-flex items-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs hover:text-accent-foreground border-border h-8 gap-1.5 px-3 has-[>svg]:px-3.5 w-full justify-start bg-muted/25 hover:bg-muted/50"
              data-cy="post-save-other-collection"
              data-orientation="vertical"
              data-radix-collection-item=""
              href="/collections/other-author/collection-b"
              role="menuitem"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-library size-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m16 6 4 14"
                />
                <path
                  d="M12 6v14"
                />
                <path
                  d="M8 8v12"
                />
                <path
                  d="M4 4v16"
                />
              </svg>
              <span
                class="min-w-0 flex-1 truncate text-left text-xs font-bold text-foreground"
                data-testid="typography"
              >
                John's Quotes
              </span>
              <span
                class="relative flex shrink-0 overflow-hidden rounded-full h-4 w-4"
                data-testid="post-save-other-collection-avatar"
              >
                <span
                  class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
                >
                  <div
                    class="facehash h-full w-full rounded-full text-background"
                    data-facehash=""
                    data-interactive="true"
                    style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(255, 0, 0);"
                  >
                    <div
                      data-facehash-gradient=""
                      style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
                    />
                    <div
                      data-facehash-face=""
                      style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(-15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
                        viewBox="0 0 63 15"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          style="animation: facehash-blink 2.8s ease-in-out 0.8s infinite; transform-origin: center center;"
                        >
                          <circle
                            cx="55.2"
                            cy="7.2"
                            fill="currentColor"
                            r="7.2"
                          />
                        </g>
                        <g
                          style="animation: facehash-blink 2.8s ease-in-out 0.8s infinite; transform-origin: center center;"
                        >
                          <circle
                            cx="7.2"
                            cy="7.2"
                            fill="currentColor"
                            r="7.2"
                          />
                        </g>
                      </svg>
                      <div
                        data-facehash-mouth=""
                        style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
                      >
                        <span
                          data-testid="avatar-fallback-initial"
                          style="font-size: 26cqw; line-height: 1;"
                        >
                          S
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
